erDiagram

    customers ||--o{ projects : "has many"
    customers ||--o{ interactions : "has many"

    projects ||--o{ interactions : "has many"
    users ||--o{ projects : "assigned to"
    users ||--o{ interactions : "logs"

    customers {
        id int PK "UNIQUE - AUTO_INCREMENT"
        name string
        kana string "nullable"
        email string "nullable"
        phone string "nullable"
        company_name string "nullable"
        department string "nullable"
        position string "nullable"
        postal_code string "nullable, length:7"
        address string "nullable"
        address_detail string "nullable"
        status enum "prospect / negotiation / won / lost / inactive"
        rank enum "A / B / C"
        assigned_user_id int FK
        memo text "nullable"
        created_at datetime
        updated_at datetime
        deleted_at datetime "nullable"
    }

    projects {
        id int PK "UNIQUE - AUTO_INCREMENT"
        customer_id int FK
        title string
        description text "nullable"
        status enum "estimating / proposing / contracted / lost / on_hold"
        amount int "nullable"
        start_date date "nullable"
        end_date date "nullable"
        assigned_user_id int FK
        memo text "nullable"
        created_at datetime
        updated_at datetime
        deleted_at datetime "nullable"
    }

    interactions {
        id int PK "UNIQUE - AUTO_INCREMENT"
        customer_id int FK
        project_id int FK "nullable, nullOnDelete"
        assigned_user_id int FK
        type enum "phone / email / visit / meeting"
        content text
        interacted_at datetime
        memo text "nullable"
        created_at datetime
        updated_at datetime
        deleted_at datetime "nullable"
    }

    users {
        id int PK "UNIQUE - AUTO_INCREMENT"
        name string
        email string "UNIQUE"
        email_verified_at datetime "nullable"
        password string
        remember_token string
        created_at datetime
        updated_at datetime
    }
